src/unit_tests/CustCodeGeneration/fail/while.cl
class Main {
    x : Int;
    main() : Object {
        while x < 1 loop
            x <- x + 1
        pool.copy()
    };
};